[package]
authors = ["mrdotb <mrdotb@protonmail.com>"]
edition = "2018"
name = "uds"
version = "0.1.0"

[dependencies]
ansi_term = "0.11"
base64 = "0.10.1"
clap = "2.33.0"
error-chain = "0.12.1"
failure = "0.1"
md5 = "0.6.1"
oauth2 = "2.0.0-beta.2"
rand = "0.6.5"
reqwest = "0.9.17"
serde = "1.0"
serde_derive = "1.0.91"
serde_json = "1.0"
url = "1.7.2"
